@@ -43,15 +43,27 @@ import org.bukkit.plugin.java.JavaPlugin;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
 public class RealRegionsPlugin extends JavaPlugin {
     private final WorldManager worldManager = new WorldManager(this);
     private boolean newUpdate;
+    private RealPermissionsAPI rpa = null;
 
-    public RealMinesAPI rma = null;
+    public RealPermissionsAPI getRealPermissionsAPI() {
+        return rpa;
+    }
+
+    private RealMinesAPI rma = null;
+
+    public RealMinesAPI getRealMinesAPI() {
+        return rma;
+    }
+
+    public void setRealMinesAPI(RealMinesAPI rma) {
+        this.rma = rma;
+    }
 
     public WorldManager getWorldManager() {
         return worldManager;
@@ -132,17 +144,12 @@ public class RealRegionsPlugin extends JavaPlugin {
 
         if (getServer().getPluginManager().getPlugin("RealPermissions") != null) {
             //register RealRegions permissions onto RealPermissions
-            List<ExternalPluginPermission> perms = new ArrayList<>();
-            perms.add(new ExternalPluginPermission("realregions.admin", "Allow access to the main operator commands of RealRegions.", Arrays.asList("rr reload", "rr worlds", "rr create", "rr tp", "rr view", "rr del", "rr delw")));
-
-            for (Region reg : worldManager.getRegionManager().getAllRegions()) {
-                for (RegionFlags value : RegionFlags.values()) {
-                    String perm = value.getBypassPermission(reg.getRWorld().getRWorldName(), reg.getRegionName());
-                    perms.add(new ExternalPluginPermission(perm, "Bypass permission for " + reg.getRegionName() + " in world: " + reg.getRWorld().getRWorldName()));
-                }
-            }
-
-            RealPermissionsAPI.getInstance().getHookupAPI().addHookup(new ExternalPlugin(this.getDescription().getName(), "&fReal&aRegions", this.getDescription().getDescription(), Material.GRASS_BLOCK, perms, this.getDescription().getVersion()));
+            rpa = RealPermissionsAPI.getInstance();
+            List<ExternalPluginPermission> perms = new ArrayList<>(List.of(
+                    new ExternalPluginPermission("realregions.admin", "Allow access to the main operator commands of RealRegions.", Arrays.asList("rr reload", "rr worlds", "rr create", "rr tp", "rr view", "rr del", "rr delw"))
+            ));
+            worldManager.getRegionManager().getAllRegions().forEach(region -> perms.addAll(region.getRegionBypassPermissions()));
+            rpa.getHookupAPI().addHookup(new ExternalPlugin(this.getDescription().getName(), "&fReal&aRegions", this.getDescription().getDescription(), Material.GRASS_BLOCK, perms, this.getDescription().getVersion()));
         }
 
         getLogger().info("Plugin has been loaded.");
